--- a/index.html
+++ b/index.html
@@ -204,9 +204,56 @@
         </div>
     </section>
     <section>
-        <div class="container-fluid">
-            <div class="container">
+        <div class="container-fluid ">
+            <div class="container newCard">
                 <h1 class="text-center">Here's what our learners have to say...</h1>
+                <div class="card" style="width: 18rem;">
+                    <div class="card-bod">
+                      <p class="card-text">"I have rarely come across a talented labotary professional like Dr.Shailaja
+                        in my last 20 year of laboratory profession she is diligent and extremely
+                        commited to her assignment.I wish her all success in a new venture I'm sure
+                        she is excel with the high rank."</p>
+                        <h6>Dr. Kausar Fatima</h6>
+                    </div>
+                </div>
+                <div class="card" style="width: 18rem;">
+                    <div class="card-bod">
+                      <p class="card-text">"I have rarely come across a talented labotary professional like Dr.Shailaja
+                        in my last 20 year of laboratory profession she is diligent and extremely
+                        commited to her assignment.I wish her all success in a new venture I'm sure
+                        she is excel with the high rank."</p>
+                        <h6>Dr. Veena R</h6>
+                    </div>
+                </div>
+                <div class="card" style="width: 18rem;">
+                    <div class="card-bod">
+                      <p class="card-text">"I have rarely come across a talented labotary professional like Dr.Shailaja
+                        in my last 20 year of laboratory profession she is diligent and extremely
+                        commited to her assignment.I wish her all success in a new venture I'm sure
+                        she is excel with the high rank."</p>
+                        <h6>Dr. Sanjay Parchai</h6>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="container-fluid">
+            <div class="container newOnecar">
+                <h1 class="text-center">Memberships</h1>
+                <p class="text-center">Join the world's fastest growing community for experts
+                    ,coaches and creators.
+                </p>
+                <div class="card" style="width: 70rem;">
+                    <div class="card-body">
+                      <h5 class="card-title">One Time Free</h5>
+                      <span class="rupee-symbol">&#8377; 999</span>
+                      <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="card-link">Card link</a>
+                      <a href="#" class="card-link">Another link</a>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
